mobile.init.styles, mobile.startup: Fix printing of collapsed Parsoid sections
On mobile, Parsoid-rendered articles have sections collapsed by
default. When printing, these sections stayed collapsed, making
the printout unusable.

Scope the pre-JS section hiding in main.less to @media screen so
it never applies during print, and add @media print rules in
Toggler.less to override the hidden attribute set by
sectionCollapsing.js. The new rules are co-located with the
existing legacy parser print rules.

Bug: T416065

--- a/resources/mobile.init.styles/main.less
+++ b/resources/mobile.init.styles/main.less
@@ -10,7 +10,7 @@
 	&.mf-expand-sections-clientpref-0 @{selector-parsoid-top-heading} + div:not( .mf-collapsible-content ),
 	.collapsible-block:not( .collapsible-block-js ) {
 		/** the breakpoint used here must correspond with wgMFDeviceWidthTablet to avoid [[phab:T414221]] */
-		@media all and ( max-width: @max-width-breakpoint-mobile ) {
+		@media screen and ( max-width: @max-width-breakpoint-mobile ) {
 			display: none;
 		}
 	}
